--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "yarn tinacms server:start -c \"next dev\"",
     "build": "yarn tinacms server:start -c \"next build\"",
     "start": "yarn tinacms server:start -c \"next start\"",
-    "export": "yarn build && next export"
+    "export": "yarn build && next export",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "devDependencies": {
     "@tinacms/cli": "^0.53.2",
@@ -15,9 +19,11 @@
     "@types/react": "^16.9.43",
     "@types/styled-components": "^5.1.3",
     "autoprefixer": "^10.2.6",
+    "cypress": "^8.2.0",
     "postcss": "^8.3.5",
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^8.0.1",
+    "start-server-and-test": "^1.13.1",
     "tailwindcss": "^2.2.4"
   },
   "dependencies": {
