--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,3 +13,5 @@ jobs:
           wait-on: 'http://localhost:3000'
           # wait for 1 minute for the server to respond
           wait-on-timeout: 60
+          browser: chrome
+          headless: true
